--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rust_editor"
-version = "0.1.0"
+name = "frog"
+version = "0.2.0"
 authors = ["Tesseract Cat <tesseractcats@gmail.com>"]
 edition = "2018"
 
@@ -13,4 +13,8 @@ regex = "1.4.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 lazy_static = "1.4.0"
+rust-embed="5.6.0"
 tinyfiledialogs = "3"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["shellscalingapi"] }
